--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,8 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+    <ul>
+      <li><a href="./">index</a></li>
+      <li><a href="./videos">videos</a></li>
+      <li><a href="./images">images</a></li>
+    </ul>
+   <section id="example" class="well"></section>
+   <h1>hello world</h1>
+
