--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,7 @@
- <ul>
-    <li><a href="./">index</a></li>
-    <li><a href="./images">images</a></li>
-    <li><a href="./articles">articles</a></li>
+click on this link <ul>
+    <li><a href="./">index</a></li> ||
+    <li><a href="./images">images</a></li> ||
+    <li><a href="./articles">articles</a></li> ||
     <li><a href="./jdklsjl">error link</a></li>
   </ul>
 
