adding style again

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,4 @@
-click on this link <ul>
+<strong>click on these links || Cliquer ces liens</strong><ul>
     <li><a href="./">index</a></li> ||
     <li><a href="./images">images</a></li> ||
     <li><a href="./articles">articles</a></li> ||
